[gd_scene format=3 uid="uid://cxf44xckufn0a"]

[ext_resource type="Script" uid="uid://dh3rncaofki5q" path="res://scripts/hud.gd" id="1_ahhtf"]
[ext_resource type="Texture2D" uid="uid://cv7xfrdjbdytf" path="res://assets/Images/UI/Sprite sheets/Sprite sheet for Basic Pack.png" id="2_oo0fn"]

[sub_resource type="AtlasTexture" id="AtlasTexture_5ysmq"]
atlas = ExtResource("2_oo0fn")
region = Rect2(608, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_uo2fv"]
atlas = ExtResource("2_oo0fn")
region = Rect2(144, 144, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_oo0fn"]
atlas = ExtResource("2_oo0fn")
region = Rect2(640, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_6fi6k"]
atlas = ExtResource("2_oo0fn")
region = Rect2(672, 0, 32, 32)

[node name="HUD" type="CanvasLayer" unique_id=1592192266 node_paths=PackedStringArray("tool_selection_textures")]
script = ExtResource("1_ahhtf")
tool_selection_textures = [NodePath("ToolsTextureContainer/BackgroundTexture/AxeSelectedTexture"), NodePath("ToolsTextureContainer/BackgroundTexture/HoeSelectedTexture"), NodePath("ToolsTextureContainer/BackgroundTexture/WateringSelectedTexture")]

[node name="ToolsTextureContainer" type="ColorRect" parent="." unique_id=1414452489]
offset_left = 37.0
offset_top = 44.0
offset_right = 133.0
offset_bottom = 76.0
color = Color(1, 1, 1, 0)

[node name="BackgroundTexture" type="NinePatchRect" parent="ToolsTextureContainer" unique_id=1346357408]
layout_mode = 0
offset_right = 96.0
offset_bottom = 32.0
texture = ExtResource("2_oo0fn")
region_rect = Rect2(736, 32, 32, 32)
patch_margin_top = 24
axis_stretch_horizontal = 1
axis_stretch_vertical = 1

[node name="AxeTexture" type="TextureRect" parent="ToolsTextureContainer/BackgroundTexture" unique_id=1469841295]
visible = false
layout_mode = 0
offset_right = 32.0
offset_bottom = 32.0
texture = SubResource("AtlasTexture_5ysmq")

[node name="AxeSelectedTexture" type="TextureRect" parent="ToolsTextureContainer/BackgroundTexture" unique_id=1500886434]
layout_mode = 0
offset_right = 32.0
offset_bottom = 32.0
texture = SubResource("AtlasTexture_uo2fv")

[node name="HoeTexture" type="TextureRect" parent="ToolsTextureContainer/BackgroundTexture" unique_id=414572785]
visible = false
layout_mode = 0
offset_left = 32.0
offset_right = 64.0
offset_bottom = 32.0
texture = SubResource("AtlasTexture_oo0fn")

[node name="HoeSelectedTexture" type="TextureRect" parent="ToolsTextureContainer/BackgroundTexture" unique_id=1895928099]
visible = false
layout_mode = 0
offset_left = 32.0
offset_right = 64.0
offset_bottom = 32.0
texture = SubResource("AtlasTexture_uo2fv")

[node name="WateringTexture" type="TextureRect" parent="ToolsTextureContainer/BackgroundTexture" unique_id=1027986297]
visible = false
layout_mode = 0
offset_left = 64.0
offset_right = 96.0
offset_bottom = 32.0
texture = SubResource("AtlasTexture_6fi6k")

[node name="WateringSelectedTexture" type="TextureRect" parent="ToolsTextureContainer/BackgroundTexture" unique_id=1607233534]
visible = false
layout_mode = 0
offset_left = 64.0
offset_right = 96.0
offset_bottom = 32.0
texture = SubResource("AtlasTexture_uo2fv")
